# serializer version: 1
# name: GroupsViewSetTestCase.test_related_groups
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT argMax(person_id, version) AS person_id
  FROM person_distinct_id2
  WHERE team_id = 99999
    AND distinct_id IN
      (SELECT distinct_id
       FROM events
       WHERE team_id = 99999
         AND timestamp > '2021-02-09T00:00:00.000000'
         AND timestamp < '2021-05-10T00:00:00.000000'
         AND $group_0 = '0::0' )
  GROUP BY distinct_id
  HAVING argMax(is_deleted, version) = 0
  '''
# ---
# name: GroupsViewSetTestCase.test_related_groups.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT group_type_index,
                  group_key
  FROM groups
  WHERE team_id = 99999
    AND group_type_index IN [1]
    AND (group_type_index,
         group_key) IN
      (SELECT tuples.1 AS group_type_index,
              tuples.2 AS group_key
       FROM events e ARRAY
       JOIN arrayFilter(x -> x.2 != '', [(toUInt8(1), e.$group_1)]) AS tuples
       WHERE team_id = 99999
         AND e.timestamp > '2021-02-09T00:00:00.000000'
         AND e.timestamp < '2021-05-10T00:00:00.000000'
         AND e.$group_0 = '0::0' )
  ORDER BY group_type_index,
           group_key
  '''
# ---
# name: GroupsViewSetTestCase.test_related_groups_person
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT group_type_index,
                  group_key
  FROM groups
  WHERE team_id = 99999
    AND group_type_index IN [0, 1]
    AND (group_type_index,
         group_key) IN
      (SELECT tuples.1 AS group_type_index,
              tuples.2 AS group_key
       FROM events e ARRAY
       JOIN arrayFilter(x -> x.2 != '', [(toUInt8(0), e.$group_0), (toUInt8(1), e.$group_1)]) AS tuples
       WHERE team_id = 99999
         AND e.timestamp > '2021-02-09T00:00:00.000000'
         AND e.timestamp < '2021-05-10T00:00:00.000000'
         AND e.person_id = '01795392-cc00-0003-7dc7-67a694604d72' )
  ORDER BY group_type_index,
           group_key
  '''
# ---
# name: GroupsViewSetTestCase.test_related_groups_person.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT DISTINCT $group_1 AS group_key
  FROM events e
  JOIN
    (SELECT distinct_id,
            argMax(person_id, version) as person_id
     FROM person_distinct_id2
     WHERE team_id = 99999
     GROUP BY distinct_id
     HAVING argMax(is_deleted, version) = 0) pdi on e.distinct_id = pdi.distinct_id
  JOIN
    (SELECT group_key
     FROM groups
     WHERE team_id = 99999
       AND group_type_index = 1
     GROUP BY group_key) groups ON $group_1 = groups.group_key
  WHERE team_id = 99999
    AND timestamp > '2021-02-09T00:00:00.000000'
    AND timestamp < '2021-05-10T00:00:00.000000'
    AND group_key != ''
    AND pdi.person_id = '01795392-cc00-0003-7dc7-67a694604d72'
  ORDER BY group_key
  '''
# ---
